--- a/FinalProject_it3/Web.config
+++ b/FinalProject_it3/Web.config
@@ -82,7 +82,7 @@
      <system.net>
     <mailSettings>
       <smtp from="katracey@gmail.com">
-        <network host="smtp.gmail.com" port="587" userName="katracey@gmail.com" password="7impatiens" enableSsl="true" />
+        <network host="smtp.gmail.com" port="587" userName="katracey@gmail.com" password="placeholderPW" enableSsl="true" />
       </smtp>
     </mailSettings>
   </system.net>
